2002-01-25  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/load.test: New test; for search-path with Elisp
	nil-terminated lists for PATH and EXTENSIONS.

	* tests/elisp.test: More tests for Scheme primitives that should
	accept Elisp nil-terminated lists.

2002-01-24  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/elisp.test: More new tests for the Elisp nil value.

2002-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* Makefile.am (SCM_TESTS): Added elisp.test.

	* tests/elisp.test: New file.

2001-11-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test: Added more division by zero tests.

2001-11-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test: Added division by zero tests.

2001-11-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test: Added some tests, updated some others with
	respect to recent changes in eval.c.  Further, extracted test
	cases for guile's extended set! functionality to srfi-17.test.

	* tests/srfi-17.test:  New file.

2001-11-04  Stefan Jahn  <stefan@lkcc.org>

	* tests/ports.test: Run (close-port) before (delete-file) if
	necessary/advisory.

2001-10-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/eval.test:  Added tests for promises.

2001-10-21  Mikael Djurfeldt  <mdj@linnaeus>

	* lib.scm: Move module the system directives `export',
	  `export-syntax', `re-export' and `re-export-syntax' into the
	  `define-module' form.  This is the recommended way of exporting
	  bindings.

2001-10-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'cond =>' syntax with
	else clause.  Changed some tests and comments related to the
	'case' form to reflect recent changes in the implementation.

2001-10-14  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'lambda' syntax.

2001-10-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'case' syntax.

2001-10-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>
